Fixed sidebar text on small screens, fixed error when empty sidebar

--- a/src/modules/shared/components/sidebar/sidebar.component.scss
+++ b/src/modules/shared/components/sidebar/sidebar.component.scss
@@ -72,6 +72,12 @@
           padding-right: 30px;
         }
       }
+      &-name {
+        max-width: 14vw;
+        line-break: strict;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
